Reinstating dependencies since this port directly uses them, to make them explicit for port's purposes.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72634 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/scantailor/Portfile
+++ b/dports/graphics/scantailor/Portfile
@@ -21,7 +21,11 @@ long_description                Scan Tailor is an interactive post-processing to
                                 DJVU file. Scanning, optical character recognition, and \
                                 assembling multi-page documents are out of scope of this project.
 
-depends_lib-append              port:boost
+depends_lib-append              port:jpeg \
+                                port:zlib \
+                                port:libpng \
+                                port:tiff \
+                                port:boost
 
 master_sites                    sourceforge
 
