xsnow: add required xorg dependencies (#26927)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72636 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xsnow/Portfile
+++ b/dports/x11/xsnow/Portfile
@@ -18,6 +18,8 @@ checksums	md5 451d8fc0a2b5393b428faa496a556036 \
 		sha1 d63987560dac9c6341e50d270089e40d17031ce3 \
 		rmd160 4fdf881d045b986f003a13c0eaa2308775cf5e9e
 
+depends_lib	port:xpm
+
 use_xmkmf	yes
 destroot.target-append install.man
 
