qtoctave-mac: use path:-style dependency so only MacPorts-installed versions of octave satisfy the dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@72638 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qtoctave-mac/Portfile
+++ b/dports/aqua/qtoctave-mac/Portfile
@@ -17,7 +17,7 @@ long_description    QtOctave is a front-end for Octave. Octave is a high-level l
 homepage            http://qtoctave.wordpress.com
 distname            qtoctave-${version}
 master_sites        http://forja.rediris.es/frs/download.php/1760/
-depends_lib-append  bin:octave:octave
+depends_lib-append  path:bin/octave:octave
 
 depends_build-append port:cmake
 checksums           md5     a15edc82c6780dc3764052b04bf902f0 \
