djview: remove errant backslash
git-svn-id: https://svn.macports.org/repository/macports/trunk@72639 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/djview/Portfile
+++ b/dports/aqua/djview/Portfile
@@ -28,7 +28,7 @@ checksums           md5     0461a26dbcac33dcc5eb7955ac357504 \
                     rmd160  256abad9cc6d661ba19caf209b74d9937eec4bce
 
 depends_lib-append \
-    port:djvulibre \
+    port:djvulibre
 
 configure.args \
     --disable-nsdejavu \
