Apply msa's patch which brings clojure-contrib up to 1.2, fixes #26904.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72640 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/clojure-contrib/Portfile
+++ b/dports/lang/clojure-contrib/Portfile
@@ -3,10 +3,11 @@
 PortSystem          1.0
 
 name                clojure-contrib
-version             1.1.0
+conflicts           clojure-contrib-devel
+version             1.2.0
 categories          lang java
 maintainers         gmail.com:ian.eure
-description         The Clojure programming language (1.1) - Contrib
+description         The Clojure programming language - Contrib
 long_description    Clojure is a dynamic programming language for the JVM. \
                     It is interactive, yet compiled, with a robust \
                     infrastructure for concurrency. It is a functional \
@@ -15,16 +16,16 @@ long_description    Clojure is a dynamic programming language for the JVM. \
 homepage            http://clojure.org/
 platforms           darwin
 depends_build       port:clojure
-master_sites        github:richhickey/clojure-contrib
+master_sites        http://github.com/downloads/clojure/clojure-contrib/
 
-fetch.type          git
-git.url             git://github.com/richhickey/clojure-contrib.git
-git.branch          d132c5f1cba8d8861430e54a53f208a32c1c76d9
+checksums           md5 83cc86fd2929ca417a9ab9f2a0dedadb \
+                    sha1 3a65c81b7c7bb64cd5e0d16e8bc6022ecb40622c \
+                    rmd160 7794c99d767b3029b5110db5d9b67600af290c48
+
+use_zip             yes
 
 use_configure       no
-
-build.cmd           ant
-build.target        jar
+build               {}
 
 destroot {
     set javadir ${destroot}${prefix}/share/java
@@ -33,5 +34,5 @@ destroot {
 
     xinstall -m 0755 -d ${javadir}
     xinstall -m 0755 -d ${clojuredir}
-    xinstall -m 0644 -W ${worksrcpath} ${name}.jar ${contribjar}
+    xinstall -m 0644 -W ${worksrcpath}/target ${name}-${version}.jar ${contribjar}
 }
