--- a/dports/gnome/gst-plugins-base/Portfile
+++ b/dports/gnome/gst-plugins-base/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                gst-plugins-base
 version             0.10.30
-revision            3
+revision            4
 description         This is gst-plugins, a set of plug-ins for GStreamer.
 long_description    ${description}
 maintainers         rmstonecipher openmaintainer
@@ -37,6 +37,12 @@ configure.args \
     --disable-ivorbis \
     --enable-introspection=no
 
+#
+# port orc is not universal
+#
+
+universal_variant no
+
 variant no_x11 {
     configure.args-append --without-x --disable-x --disable-xvideo --disable-xshm
 }
@@ -60,7 +66,7 @@ variant no_ogg description {Remove library dependency on libogg and its dependen
 }
 #
 # current cdparanoia port (cdparanoia III 10.2) appears to not be API compatible
-# with gst-plugins-base.  See #19843. 
+# with gst-plugins-base.  See #19843.
 # disable by default until this is rectified.
 #
 
