Upgrade Leiningen to 1.3.1.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72642 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/leiningen/Portfile
+++ b/dports/devel/leiningen/Portfile
@@ -3,8 +3,8 @@
 PortSystem          1.0
 
 name                leiningen
-version             1.1.0
-revision            2
+version             1.3.1
+revision            0
 categories          devel java
 maintainers         gmail.com:ian.eure
 platforms           darwin
@@ -14,10 +14,11 @@ long_description    ${description}
 homepage            http://github.com/technomancy/${name}
 master_sites        http://download.github.com/
 
-distname            technomancy-${name}-0577148
-checksums           md5 f0c0ad3450c3979658aea443c560761a \
-                    sha1 ca88d74fb4c893eb083fa84f44d17c61f8186621 \
-                    rmd160 876414ab1bf1eb101ac7f1b82eb18a4e7cf9fb11
+distname            technomancy-${name}-${version}-0-g2ea4b63
+worksrcdir          technomancy-${name}-2ea4b63
+checksums           md5 707fb0da7b89b44d9d37a9bac2bf3b3f \
+    sha1 dc8d681f72f325f3b75e8c477bffc2cea52976d8 \
+    rmd160 e38ee084d46c09f8b622703e04a9e41acadbf531
 
 depends_build       port:clojure \
                     port:clojure-contrib \
