gimp-gap, gimp-gap-devel: disable ccache, closes #26905.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72643 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gimp-gap-devel/Portfile
+++ b/dports/graphics/gimp-gap-devel/Portfile
@@ -21,6 +21,7 @@ long_description \
 
 universal_variant  no
 use_parallel_build no
+configure.ccache   no
 
 homepage        http://www.gimp.org/
 platforms       darwin
