--- a/dports/graphics/gimp-gap/Portfile
+++ b/dports/graphics/gimp-gap/Portfile
@@ -22,6 +22,7 @@ long_description \
 
 universal_variant  no
 use_parallel_build no
+configure.ccache   no
 
 homepage        http://www.gimp.org/
 platforms       darwin
