devhelp: drop GTK_DISABLE_DEPRECATED from cflags to allow build against glib2 2.22.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72645 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/devhelp/Portfile
+++ b/dports/gnome/devhelp/Portfile
@@ -25,6 +25,8 @@ checksums       md5     447413a54d3bec2480e9a290e261703d \
                 sha1    51eda53f04080eaae75b6e62e222b98fe5bb0d6f \
                 rmd160  2ce6762a7838afad03f237ab0ac662cae426163c
 
+patchfiles      patch-src-Makefile.am.diff
+
 depends_build   port:pkgconfig \
                 port:python26
 
@@ -32,6 +34,8 @@ depends_lib     port:webkit-gtk \
                 port:gconf  \
                 port:libwnck \
                 port:libunique
+
+use_autoreconf  yes
 
 configure.args  --disable-schemas-install
 
