--- a/dports/devel/automoc/Portfile
+++ b/dports/devel/automoc/Portfile
@@ -6,10 +6,11 @@ PortSystem          1.0
 # See dports/_resources/port1.0/group/kde4-1.1.tcl for more info.
 PortGroup           kde4   1.1
 depends_build-delete port:automoc
+depends_lib-delete  port:phonon
 
 name                automoc
 version             0.9.88
-revision            2
+revision            3
 categories          devel kde kde4
 maintainers         nomaintainer
 description         A tool which automatically creates .moc files and compiles them in.
