postgis: add postgresql90 variant (closes #26933)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72647 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/postgis/Portfile
+++ b/dports/databases/postgis/Portfile
@@ -6,6 +6,7 @@ PortGroup           archcheck 1.0
 
 name                postgis
 version             1.5.2
+revision            1
 categories          databases
 platforms           darwin
 maintainers         stromnov openmaintainer
@@ -60,7 +61,7 @@ build.args          ICONV_LDFLAGS='-L${prefix}/lib -liconv'
 
 destroot.target-append docs-install comments-install
 
-set pgsql_suffixes {82 83 84}
+set pgsql_suffixes {82 83 84 90}
 
 set pgsql_ports {}
 foreach s ${pgsql_suffixes} {
