--- a/dports/archivers/sharutils/Portfile
+++ b/dports/archivers/sharutils/Portfile
@@ -1,9 +1,10 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem			1.0
 
 name				sharutils
-version				4.7
+version				4.10
 categories			archivers
 platforms			darwin
 maintainers			nomaintainer
@@ -19,24 +20,23 @@ long_description	GNU shar makes so-called shell archives out of many files, \
 					correct unsharing order, and provide simplistic checksums.
 
 homepage			http://www.gnu.org/software/${name}/
-master_sites		gnu:${name}/REL-${version}
+master_sites		gnu:${name}
 use_bzip2			yes
 
 depends_lib			port:gettext \
 					port:libiconv
 
-checksums			md5 729c070d814d9c688489d88dd7fd3efb \
-					sha1 0b8c1d54fdcf97a93aba079d342d1873a8fc423b \
-					rmd160 6ef271d21ea41003ff13d6aef241c6a4fd4dc296
+checksums			sha1    9c50b2c36c84c9c26deb34ba2d8bb2521d00ce5b \
+					rmd160  2ec3138af63aa7b62288f4b8768bf72b885d3eb2
 
 post-destroot {
-	set docdir ${prefix}/share/doc/${name}-${version}
+	set docdir ${prefix}/share/doc/${name}
 	xinstall -d ${destroot}${docdir}
 	xinstall -m 0644 -W ${worksrcpath} ABOUT-NLS AUTHORS COPYING ChangeLog NEWS README THANKS \
 		TODO ${destroot}${docdir}
 }
 
 livecheck.type		regex
-livecheck.url		http://ftp.gnu.org/gnu/sharutils/?C=M&O=D
-livecheck.regex		REL-(\\d+(?:\\.\\d+)*)
+livecheck.url		http://ftp.gnu.org/gnu/${name}/?C=M&O=D
+livecheck.regex		${name}-(\\d+(?:\\.\\d+)*)
 
