qt4-mac: Correct SDK version for 10.4. Fixes ticket #26935.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72650 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac/Portfile
+++ b/dports/aqua/qt4-mac/Portfile
@@ -243,7 +243,14 @@ platform darwin {
     if {${SDK} == ""} {
         # else use the one for this OS version, if installed
         set minor [expr [lindex [split ${os.version} "."] 0] - 4]
-        set sdk_version "10.${minor}"
+        # set SDK version depending on OS version
+        set sdk_version ""
+        if {${minor} == "4"} {
+            # OSX 10.4 requires an additional 'u'
+            set sdk_version "10.4u"
+        } else {
+            set sdk_version "10.${minor}"
+        }
         set SDK ${developer_dir}/SDKs/MacOSX${sdk_version}.sdk
     }
     if {[file exists ${SDK}]} {
