dependents of gst-plugins-base are not universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72651 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/telepathy-farsight/Portfile
+++ b/dports/comms/telepathy-farsight/Portfile
@@ -29,8 +29,9 @@ depends_lib     port:telepathy-glib \
                 port:farsight2
 
 #
-# farsight2 is not universal
+# farsight2 -> libnice -> gst-plugins-base -> orc is not universal
 #
+
 universal_variant   no
 
 patchfiles      patch-python-pytpfarsightmodule.c.diff \
