--- a/dports/comms/telepathy-gabble/Portfile
+++ b/dports/comms/telepathy-gabble/Portfile
@@ -5,10 +5,11 @@ PortSystem 1.0
 
 name            telepathy-gabble
 version         0.10.3
+revision        1
 description     The ${name} component of Telepathy - a Flexible Communications Framework
 long_description \
                 Gabble is a Jabber/XMPP connection manager that handles single- and multi-user \
-                chats and voice/video calls.  
+                chats and voice/video calls.
 maintainers     devans openmaintainer
 categories      comms
 platforms       darwin
@@ -34,6 +35,12 @@ patchfiles      patch-configure.diff
 configure.python ${prefix}/bin/python2.6
 
 configure.args  --disable-silent-rules
+
+#
+# libnice -> gst-plugins-base -> orc is not universal
+#
+
+universal_variant no
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
