--- a/dports/gnome/gnome-media/Portfile
+++ b/dports/gnome/gnome-media/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 
 name            gnome-media
 version         2.30.0
-revision        1
+revision        2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     A collection of utilities for simple multimedia handling.
 long_description	\
@@ -36,6 +36,12 @@ configure.args  --disable-schemas-install \
                 --disable-scrollkeeper \
                 --disable-pulseaudio \
                 --disable-gstmix
+
+#
+# gst-plugins-base -> orc is not universal
+#
+
+universal_variant no
 
 variant deprecated description {Enable deprecated functionality} {
         configure.args-delete --disable-gstmix
