--- a/dports/net/libnice/Portfile
+++ b/dports/net/libnice/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            libnice
 version         0.0.13
+revision        1
 description     Libnice is an implementation of the IETF's draft Interactice \
                 Connectivity Establishment standard (ICE).
 long_description \
@@ -17,9 +18,9 @@ platforms       darwin
 homepage        http://nice.freedesktop.org/wiki/
 master_sites    http://nice.freedesktop.org/releases/
 
-checksums           md5     e5b9f799a57cb939ea2658ec35253ab9 \
-                    sha1    703b03fbb20da693c057d3fe5074b182a17c7364 \
-                    rmd160  0a20d03c4ed0fb1677149b2d9595a6111e958a15
+checksums       md5     e5b9f799a57cb939ea2658ec35253ab9 \
+                sha1    703b03fbb20da693c057d3fe5074b182a17c7364 \
+                rmd160  0a20d03c4ed0fb1677149b2d9595a6111e958a15
 
 depends_build   port:pkgconfig \
                 port:gtk-doc
@@ -30,6 +31,12 @@ patchfiles      patch-agent-interfaces.c.diff
 
 configure.args  --disable-gupnp \
                 --with-gstreamer
+
+#
+# gst-plugins-base -> orc is not universal
+#
+
+universal_variant no
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
