--- a/dports/comms/farsight2/Portfile
+++ b/dports/comms/farsight2/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            farsight2
 version         0.0.21
+revision        1
 description     Farsight - Audio/Video Communications Framework
 long_description \
                 The Farsight project is an effort to create a framework \
@@ -42,12 +43,11 @@ configure.args  --disable-gupnp \
                 --disable-valgrind
 
 #
-# py26-gst-python -> py26-cairo -> py26-numpy is not universal
+# py26-gst-python -> gst-plugins-base -> orc is not universal
+# libnice -> gst-plugins-base -> orc is not universal
 #
 
-if {[variant_isset python]} {
-        universal_variant no
-}
+universal_variant no
 
 variant python description {Enable bulding of Python bindings} {
                 configure.args-delete       --disable-python
