--- a/dports/python/py26-gst-python/Portfile
+++ b/dports/python/py26-gst-python/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                py26-gst-python
 version             0.10.19
+revision            1
 categories          python gnome multimedia
 maintainers         rmstonecipher elelay openmaintainer
 description         GStreamer python bindings
@@ -28,6 +29,12 @@ configure.pre_args-append   --prefix=${python_prefix}
 configure.args-append       --includedir=${python_prefix}/include/python2.6
 configure.pkg_config_path   ${python_prefix}/lib/pkgconfig
 configure.python            ${prefix}/bin/python2.6
+
+#
+# gst-plugins-base -> orc is not universal
+#
+
+universal_variant no
 
 livecheck.url       http://gstreamer.freedesktop.org/src/${my_name}/
 livecheck.regex     "${my_name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
