--- a/dports/devel/mpfr/Portfile
+++ b/dports/devel/mpfr/Portfile
@@ -9,7 +9,7 @@ PortGroup  muniversal 1.0
 
 name                mpfr
 set base_version    3.0.0
-set patch_level     4
+set patch_level     7
 version             ${base_version}-p${patch_level}
 #version             ${base_version}
 categories          devel math
@@ -47,6 +47,18 @@ checksums \
         md5     05bd04f54ffcdb3cbffb6da9e7989427 \
         sha1    b41b1f26ddd0917c024c573d9612b2af1451299f \
         rmd160  44a2c624382d98b605d0ab6b09c94e691725d906 \
+    patch05 \
+        md5     6043bd3a144d19109e52ed7060c7e914 \
+        sha1    9ef3d433b82be498e9a34fb149d2d3682e83180f \
+        rmd160  2d20602975cc1dd1a954992af7a459d2bf9b4bfc \
+    patch06 \
+        md5     392ed630778ad8a1bbbc8050d11de68c \
+        sha1    9a53b5a646e2ccf6bf46a18641aff32062035c01 \
+        rmd160  1d65d68e59741f4adcec5f4a401c98e69c57a874 \
+    patch07 \
+        md5     67a2dcf24c30d75fdbe62563edf58901 \
+        sha1    f34e0b4bc0b719e0a427cbef7c41e4853d7fe9da \
+        rmd160  0b5053f4f77a970701dd4a6048b7bb0533fe1cf6 \
     [suffix ${distname}] \
         md5     f45bac3584922c8004a10060ab1a8f9f \
         sha1    8ae8bc72ac26a0f17ad9f57c520264c056c64770 \
