python/py26-py{gccxml,plusplus}-devel: no livecheck for fetch type svn
git-svn-id: https://svn.macports.org/repository/macports/trunk@72653 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-pygccxml-devel/Portfile
+++ b/dports/python/py26-pygccxml-devel/Portfile
@@ -25,3 +25,5 @@ depends_lib         port:gccxml-devel \
 test.run            yes
 test.cmd            python2.6
 test.target         unittests/test_all.py
+
+livecheck.type      none
