--- a/dports/python/py26-pyplusplus-devel/Portfile
+++ b/dports/python/py26-pyplusplus-devel/Portfile
@@ -22,3 +22,5 @@ worksrcdir          pyplusplus_dev
 depends_lib         port:py26-pygccxml-devel \
                     port:py26-distribute
 
+
+livecheck.type      none
