dependents of py26-numpy: these ports and their dependencies now build universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@72654 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/evince/Portfile
+++ b/dports/gnome/evince/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            evince
 version         2.30.3
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Evince is a document viewer for multiple document formats like pdf, and many others.
 long_description \
@@ -50,12 +51,6 @@ configure.args  --disable-scrollkeeper \
 
 configure.ldflags-append -lstdc++
 configure.cflags-append -D__DARWIN_UNIX03=1
-
-#
-# nautilus is not universal
-#
-
-universal_variant no
 
 variant djvu description {Builds against port:djvulibre} {
     configure.args-delete --disable-djvu
