--- a/dports/gnome/gucharmap/Portfile
+++ b/dports/gnome/gucharmap/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		gucharmap
 version         2.30.3
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	gucharmap is a featureful unicode character map.
 long_description ${description}
@@ -38,12 +39,6 @@ configure.args	--disable-schemas-install \
 configure.python ${prefix}/bin/python2.6
 set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
 configure.pkg_config_path ${python_framework}/lib/pkgconfig
-
-#
-# py26-gtk -> py26-cairo -> py26-numpy is not universal
-#
-
-universal_variant no
 
 post-activate	{
     system "${prefix}/bin/scrollkeeper-update"
