--- a/dports/gnome/metacity/Portfile
+++ b/dports/gnome/metacity/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		metacity
 version		2.30.3
+revision        1
 set branch  [join [lrange [split ${version} .] 0 1] .]
 description	A window manager for the adult in you.
 long_description        ${description}
@@ -44,8 +45,6 @@ pre-fetch {
         error "gtk2 must be installed with +x11 variant."
     }
 }
-
-universal_variant no
 
 post-activate {
 	system "${prefix}/bin/scrollkeeper-update"
