--- a/dports/gnome/gedit/Portfile
+++ b/dports/gnome/gedit/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            gedit
 version         2.30.4
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     GNOME editor.
 long_description \
@@ -42,12 +43,6 @@ configure.args  --mandir=${prefix}/share/man \
 configure.python ${prefix}/bin/python2.6
 set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
 configure.pkg_config_path ${python_framework}/lib/pkgconfig
-
-#
-# py26-pygtksourceview -> py26-gtk -> py26-cairo -> py26-numpy is not universal
-#
-
-universal_variant no
 
 variant no_x11 {
         depends_lib-delete  port:xorg-libsm
