--- a/dports/gnome/gnome-desktop/Portfile
+++ b/dports/gnome/gnome-desktop/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            gnome-desktop
 version         2.30.2
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     devans openmaintainer
 categories      gnome
@@ -45,12 +46,6 @@ configure.args  --with-gnome-distributor=MacPorts \
                 --disable-scrollkeeper
 
 configure.python  ${prefix}/bin/python2.6
-
-#
-# py26-gtk -> py26-cairo -> py26-numpy is not universal
-#
-
-universal_variant no
 
 post-activate {
     system "${prefix}/bin/scrollkeeper-update"
