--- a/dports/gnome/gnome-menus/Portfile
+++ b/dports/gnome/gnome-menus/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            gnome-menus
 version         2.30.4
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     devans openmaintainer
 categories      gnome
@@ -46,12 +47,6 @@ configure.python   ${prefix}/bin/python2.6
 configure.args  --enable-introspection=no \
                 --enable-python \
                 --disable-silent-rules
-
-#
-# py26-gtk -> py26-cairo -> py26-numpy is not universal
-#
-
-universal_variant no
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
