--- a/dports/gnome/gnome-terminal/Portfile
+++ b/dports/gnome/gnome-terminal/Portfile
@@ -5,6 +5,7 @@ PortSystem  1.0
 
 name		gnome-terminal
 version		2.30.2
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	Terminal component for the GNOME 2 Desktop
 long_description \
@@ -29,12 +30,6 @@ configure.args \
 	--mandir=${prefix}/share/man \
 	--disable-schemas-install \
         --disable-scrollkeeper
-
-#
-# vte is not universal
-#
-
-universal_variant no
 
 post-activate	{
 	system "${prefix}/bin/scrollkeeper-update"
