--- a/dports/net/libgweather/Portfile
+++ b/dports/net/libgweather/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            libgweather
 version         2.30.3
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     devans openmaintainer
 categories      net gnome
@@ -48,12 +49,6 @@ configure.pkg_config_path ${python_framework}/lib/pkgconfig
 #
 
 build.env       PATH=${python_framework}/bin:$env(PATH)
-
-#
-# py26-gtk -> py26-cairo -> py26-numpy is not universal
-#
-
-universal_variant no
 
 post-activate {
     system "\
