t1lib: better homepage, use sunsite mirror group
git-svn-id: https://svn.macports.org/repository/macports/trunk@72657 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/t1lib/Portfile
+++ b/dports/devel/t1lib/Portfile
@@ -17,12 +17,11 @@ long_description \
     donated by IBM to the X11-project. But some disadvantages of the      \
     rasterizer being included in X11 have been eliminated.
 
-homepage            ftp://metalab.unc.edu/pub/Linux/libs/graphics/
+homepage            http://www.t1lib.org/
 
 platforms           darwin
 
-master_sites        ftp://sunsite.unc.edu/pub/Linux/libs/graphics/ \
-                    http://ftp.surfnet.nl/pub/sunsite/libs/graphics/
+master_sites        sunsite:libs/graphics/
 
 checksums           md5 a5629b56b93134377718009df1435f3c \
                     sha1 4b4fc22c8688eefaaa8cfc990f0039f95f4287de \
