--- a/dports/databases/couchdb-devel/Portfile
+++ b/dports/databases/couchdb-devel/Portfile
@@ -3,8 +3,8 @@
 PortSystem 1.0
 
 name                couchdb-devel
-svn.revision        916868
-version             0.11.0b${svn.revision}
+svn.revision        1025573
+version             1.1.0a${svn.revision}
 
 categories          databases
 platforms           darwin
@@ -43,6 +43,7 @@ set logdir ${prefix}/var/log/couchdb
 set dbdir ${prefix}/var/lib/couchdb
 set plistdir /Library/LaunchDaemons
 startupitem.uniquename org.apache.couchdb
+set plist ${startupitem.uniquename}.plist
 
 post-destroot {
     addgroup ${dbgroup}
@@ -54,20 +55,19 @@ post-destroot {
     destroot.keepdirs-append \
         ${destroot}${dbdir} \
         ${destroot}${logdir}
-    set plist org.apache.couchdb.plist
-    system "cd ${destroot}/Library/LaunchDaemons && ln -sf ${prefix}/Library/LaunchDaemons/${plist}"
+    system "cd ${destroot}${plistdir} && ln -sf ${prefix}${plistdir}/${plist}"
 }
 
 post-activate {
-	ui_msg "########################################################################"
-	ui_msg "# Changes in CouchDB r753448 make older database files incompatible."
-	ui_msg "# See http://wiki.apache.org/couchdb/BreakingChanges for details"
-	ui_msg "#"
-	ui_msg "# Run the following command to install the CouchDB launchd"
-	ui_msg "# startup item in order to start and re-start service automatically:"
-	ui_msg "#"
-	ui_msg "# sudo launchctl load -w /Library/LaunchDaemons/org.apache.couchdb.plist"
-	ui_msg "########################################################################"
+    ui_msg "########################################################################"
+    ui_msg "# Changes in CouchDB r753448 make older database files incompatible."
+    ui_msg "# See http://wiki.apache.org/couchdb/BreakingChanges for details"
+    ui_msg "#"
+    ui_msg "# Run the following command to install the CouchDB launchd"
+    ui_msg "# startup item in order to start and re-start service automatically:"
+    ui_msg "#"
+    ui_msg "# sudo launchctl load -w ${plistdir}/${plist}"
+    ui_msg "########################################################################"
 }
 
 livecheck.type	regex
