--- a/dports/mail/gnupg/Portfile
+++ b/dports/mail/gnupg/Portfile
@@ -4,8 +4,7 @@
 PortSystem  1.0
 
 name            gnupg
-version         1.4.10
-revision        1
+version         1.4.11
 categories      mail security
 maintainers     waqar
 description     GNU pretty-good-privacy package
@@ -24,9 +23,10 @@ master_sites    http://ftp.gnupg.org/gcrypt/gnupg/ \
                 ftp://ftp.freenet.de/pub/ftp.gnupg.org/gcrypt/gnupg/
 
 use_bzip2       yes
-checksums       ${distfiles} md5    dcf7ed712997888d616e029637bfc303 \
-                ${distfiles} sha1   fd1b6a5f3b2dd836b598a1123ac257b8f105615d \
-                ${distfiles} rmd160 d54063eaa5b25dc3c3f4ad924411ec69c25c1e62
+checksums       ${distname}${extract.suffix}    md5     411744e1ef8ce90b87938c4203f001f1 \
+                                                sha1    78e22f5cca88514ee71034aafff539c33f3c6676 \
+                                                rmd160  9daf2dedfd4c6211fc13b8cdee8f08b8f5925378
+
 configure.args  --mandir=${prefix}/share/man \
                 --infodir=${prefix}/share/info \
                 --disable-asm --disable-dynload \
@@ -52,8 +52,8 @@ variant idea description {Add support for the patented IDEA algorithm} {
     patchfiles          idea.c.gz
     checksums-append \
         idea.c.gz md5    9dc3bc086824a8c7a331f35e09a3e57f \
-        idea.c.gz sha1   82fded4ec31b97b3b2dd22741880b67cfee40f84 \
-        idea.c.gz rmd160 e35be5a031d10d52341ac5f029d28f811edd908d
+                  sha1   82fded4ec31b97b3b2dd22741880b67cfee40f84 \
+                  rmd160 e35be5a031d10d52341ac5f029d28f811edd908d
     patch.dir           ${worksrcpath}/cipher
     patch.cmd           cat
     patch.pre_args      > idea.c
