tpkg: maintainer update to 2.0.0 (#26221); supported_archs noarch
git-svn-id: https://svn.macports.org/repository/macports/trunk@72664 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/tpkg/Portfile
+++ b/dports/sysutils/tpkg/Portfile
@@ -5,9 +5,10 @@ PortSystem          1.0
 PortGroup           ruby 1.0
 
 name                tpkg
-version             1.16.2
+version             2.0.0
 categories          sysutils
 maintainers         aput.net:jheiss openmaintainer 
+supported_archs     noarch
 
 description         Tpkg is an application packaging and deployment tool.
 
@@ -23,9 +24,9 @@ platforms           darwin
 
 master_sites        sourceforge
 
-checksums           md5     90a60158233356b33fead1721cd5e228 \
-                    sha1    4f5673b5c70d01662d2d66f8690c620d64cf829e \
-                    rmd160  42203045dced07e5ca109ee94aecce4752940718
+checksums           md5     d275e979fe2974b79a8d1c92b36e14f7 \
+                    sha1    81c2c7296a97576549fc815e4eb45e9928389c5b \
+                    rmd160  f8a9d098d4e682c028c712d4a69747f2f1e98893
 
 depends_build       port:rb-rake
 depends_run         port:facter
