upc: updated for 4.5.1.2
git-svn-id: https://svn.macports.org/repository/macports/trunk@72666 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/upc/Portfile
+++ b/dports/lang/upc/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                upc
-version             4.3.2.5
-revision            1
+version             4.5.1.2
 categories          lang parallel science
 maintainers         takeshi openmaintainer
 description         Unified Parallel C
@@ -15,23 +14,19 @@ long_description    \
     for programs written in the UPC (Unified Parallel C) language. 
 homepage            http://www.gccupc.org/
 platforms           darwin
-master_sites        ftp://ftp.gccupc.org/pub/upc/rls/${name}-${version}/
+master_sites        http://www.gccupc.org/downloads/upc/rls/${name}-${version}/
 distname            ${name}-${version}.src
 
-checksums           md5     3bbb45a8d8da96714f97e2eb95eb4822 \
-                    sha1    4c3e8a60abf2f60d38b1aa48a521306e75294da3 \
-                    rmd160  939daf3f707f8f320380bef626785cfe604a9e6b
+checksums           md5     6877aedc7c3a329167d9e997ef734e40 \
+                    sha1    47c1df81dbc889ab098ad090298e27d9cd9a3d89 \
+                    rmd160  e87edf607d8b023467faf6cc6df75b7e9f972a5e
 
-depends_lib         port:gmp port:mpfr port:libiconv
+depends_lib         port:gmp port:mpfr port:libiconv port:libmpc
 
 worksrcdir          build
 
 post-extract {
     file mkdir ${worksrcpath}
-}
-
-post-patch {
-    reinplace {s|i\[356]86|x86_64|} ${workpath}/${name}-${version}/gcc/upc/config-lang.in
 }
 
 if {[info exists build_arch] && ${os.platform} == "darwin"} {
