fix for bug #24310 - python26 does not provide _bsddb
git-svn-id: https://svn.macports.org/repository/macports/trunk@72668 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/python26/Portfile
+++ b/dports/lang/python26/Portfile
@@ -45,6 +45,7 @@ patchfiles              patch-Makefile.pre.in.diff \
                         patch-Mac-Makefile.in.diff \
                         patch-Mac-PythonLauncher-Makefile.in.diff \
                         patch-Mac-Tools-Doc-setup.py.diff \
+                        patch-setup.py-db46.diff \
                         patch-Lib-ctypes-macholib-dyld.py.diff
 
 depends_lib             port:gettext port:zlib port:openssl port:tk \
