--- a/dports/audio/libsamplerate/Portfile
+++ b/dports/audio/libsamplerate/Portfile
@@ -14,9 +14,13 @@ homepage        http://www.mega-nerd.com/libsamplerate/
 platforms       darwin
 use_parallel_build  yes
 master_sites    ${homepage}
-checksums       md5     ad093e60ec44f0a60de8e29983ddbc0f \
-                sha1    98a52392eb97f9ba724ca024b3af29a8a0cc0206 \
-                rmd160  697a355393d21ad66ea4313b928f2c3322f67a39
+checksums       md5     6731a81cb0c622c483b28c0d7f90867d \
+                sha1    f3f803ec5feae5a3fdb0fa3937277669e854386e \
+                rmd160  a00f12571098fd6c50a8b9f8867cdcc3f36c1f60
+
+# 0.1.7 was stealth updated; remove this for next version
+dist_subdir     ${name}/${version}_1
+
 depends_build   path:bin/pkg-config:pkgconfig
 depends_lib     port:fftw-3 port:libsndfile
 
