--- a/dports/graphics/scantailor/Portfile
+++ b/dports/graphics/scantailor/Portfile
@@ -35,6 +35,8 @@ checksums                       md5     58f7c549284d9fb92f25d15e1f66bae2 \
 
 patchfiles                      patch-ProjectFilesDialog.cpp.diff
 
+configure.args-append           ${qt_cmake_defines}
+
 post-destroot {                 set docdir ${destroot}${prefix}/share/doc/${name}
                                 xinstall -d ${docdir}
                                 xinstall -m 644 -W ${worksrcpath} \
