fixed qt requirement check, closing ticket #26941
git-svn-id: https://svn.macports.org/repository/macports/trunk@72674 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qtoctave-mac/Portfile
+++ b/dports/aqua/qtoctave-mac/Portfile
@@ -24,6 +24,8 @@ checksums           md5     a15edc82c6780dc3764052b04bf902f0 \
                     sha1    1d18058c7549a3f25cd648183db3d99ef755257e \
                     rmd160  9e4725cc2a52cfe9b7ec1e1b74becba8146b74f0
 
+patchfiles          patch-cmakelists_txt.diff
+
 configure.cmd       cmake
 configure.pre_args  -DCMAKE_INSTALL_PREFIX=${prefix}
 configure.args      ${qt_cmake_defines} \
