added a missing dependency, pcre, fixing #26880
git-svn-id: https://svn.macports.org/repository/macports/trunk@72676 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/swig/Portfile
+++ b/dports/devel/swig/Portfile
@@ -31,7 +31,8 @@ checksums           md5     df4465a62ccc5f0120fee0890ea1a31f \
                     rmd160  6f09476c11160d07de080c6e97dc89ec71ff821d
 
 depends_build	port:bison \
-    port:gsed
+    port:gsed \
+    port:pcre
 
 post-patch {
     # The configure script should use GNU sed
