--- a/dports/devel/swig/Portfile
+++ b/dports/devel/swig/Portfile
@@ -31,8 +31,9 @@ checksums           md5     df4465a62ccc5f0120fee0890ea1a31f \
                     rmd160  6f09476c11160d07de080c6e97dc89ec71ff821d
 
 depends_build	port:bison \
-    port:gsed \
-    port:pcre
+    port:gsed
+
+depends_lib	port:pcre
 
 post-patch {
     # The configure script should use GNU sed
