Update removing of qt4-mac from list of dependencies, with the correct syntax.  Should fix "qt4-mac infinite loop issue".
git-svn-id: https://svn.macports.org/repository/macports/trunk@72678 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac/Portfile
+++ b/dports/aqua/qt4-mac/Portfile
@@ -7,7 +7,7 @@ PortGroup           archcheck 1.0
 # use the qt4 group, except for the depends_lib
 # since we're building qt4 here.
 PortGroup           qt4 1.0
-depends_lib-delete  bin:qmake:qt4-mac
+depends_lib-delete  path:bin/qmake:qt4-mac
 
 name                qt4-mac
 conflicts           qt4-mac-devel
