gnupg, gnupg12: use gnupg mirror group
git-svn-id: https://svn.macports.org/repository/macports/trunk@72680 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/gnupg/Portfile
+++ b/dports/mail/gnupg/Portfile
@@ -15,12 +15,7 @@ long_description \
     compliant application.
 homepage        http://www.gnupg.org
 platforms       darwin freebsd sunos
-master_sites    http://ftp.gnupg.org/gcrypt/gnupg/ \
-                ftp://ftp.gnupg.org/gcrypt/gnupg/ \
-                ftp://ftp.planetmirror.com/pub/gnupg/ \
-                ftp://gd.tuwien.ac.at/privacy/gnupg/gnupg/ \
-                ftp://ftp.jyu.fi/pub/crypt/gcrypt/gnupg/ \
-                ftp://ftp.freenet.de/pub/ftp.gnupg.org/gcrypt/gnupg/
+master_sites    gnupg
 
 use_bzip2       yes
 checksums       ${distname}${extract.suffix}    md5     411744e1ef8ce90b87938c4203f001f1 \
