--- a/dports/mail/gnupg12/Portfile
+++ b/dports/mail/gnupg12/Portfile
@@ -16,7 +16,7 @@ long_description        GnuPG is a complete and free replacement for PGP. \
                         Zimmermann in the early 1990s.
 homepage                http://www.gnupg.org/
 maintainers             freeshell.org:dms
-master_sites            ftp://ftp.gnupg.org/gcrypt/gnupg/:gnupg
+master_sites            gnupg:gnupg:gnupg
 distname                gnupg-${version}
 use_bzip2               yes
 distfiles               [suffix ${distname}]:gnupg
