signing-party: use debian mirror group
git-svn-id: https://svn.macports.org/repository/macports/trunk@72681 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/signing-party/Portfile
+++ b/dports/mail/signing-party/Portfile
@@ -13,7 +13,7 @@ long_description    \
     including signing scripts, party preparation scripts, etc.
 
 homepage        http://pgp-tools.alioth.debian.org/
-master_sites    http://ftp.de.debian.org/debian/pool/main/s/signing-party/
+master_sites    debian:s/signing-party/
 distname        ${name}_${version}
 worksrcdir      ${name}-${version}
 extract.suffix  .orig.tar.gz
