replacing prefix in post-patch
git-svn-id: https://svn.macports.org/repository/macports/trunk@72682 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-ssl/Portfile
+++ b/dports/python/py25-ssl/Portfile
@@ -21,15 +21,8 @@ checksums           md5     81ea8a1175e437b4c769ae65b3290e0c \
                     sha1    18035755a0ab75fe23191b5588d4572bfe675b5c \
                     rmd160  c4bf59d13ad7142d09cca7b9796a849275874e0a
 
-
 patchfiles          patch-setup_py.diff
 
-
-#patch   {
-#        reinplace "s|/sw/|${prefix}/|g" ${worksrcpath}/setup.py
-#}
-
-#post-destroot   {
-#        xinstall -m 644 -W ${worksrcpath} COPYING ChangeLog INSTALL README \
-#                TODO ${destroot}${prefix}/share/doc/${name}
-#}
+post-patch   {
+        reinplace "s|@@PREFIX@@|${prefix}|g" ${worksrcpath}/setup.py
+}
