db44, db46, db47: update patch_sites now that oracle have fixed their site (#26075)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72684 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/db46/Portfile
+++ b/dports/databases/db46/Portfile
@@ -22,7 +22,7 @@ homepage                http://www.oracle.com/database/berkeley-db/index.html
 master_sites            http://download-west.oracle.com/berkeley-db/ \
                         http://download-east.oracle.com/berkeley-db/ \
                         http://download-uk.oracle.com/berkeley-db/
-patch_sites             macports
+patch_sites             http://download.oracle.com/berkeley-db/patches/db/${version}/
 patchfiles              patch.${version}.1 \
                         patch.${version}.2 \
                         patch.${version}.3 \
