pure-faust: update to 0.2
git-svn-id: https://svn.macports.org/repository/macports/trunk@72685 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/pure-faust/Portfile
+++ b/dports/audio/pure-faust/Portfile
@@ -4,8 +4,7 @@
 PortSystem                      1.0
 PortGroup                       pure 1.0
 
-pure.setup                      faust 0.1
-revision                        2
+pure.setup                      faust 0.2
 categories                      audio lang
 platforms                       darwin
 maintainers                     ryandesign
@@ -17,8 +16,7 @@ description                     a module which lets you load and run \
 
 long_description                ${name} provides ${description}.
 
-checksums                       md5     87cf24132c100215c36a6d6a207b7583 \
-                                sha1    22e1794868f7c0f04a4cbfe8299bfbdbd37d3825 \
-                                rmd160  280db36943cea926afd3b97b4de1ac2ebac19ded
+checksums                       sha1    b457cfb310e477655c68d2ca0019bda8b34e8f1e \
+                                rmd160  992ebaa0c135c2d609e7b06562d13b173162a861
 
 depends_run-append              port:faust
