vtk5: Trail fix for ticket #26956; works for me now.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72687 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/vtk5/Portfile
+++ b/dports/graphics/vtk5/Portfile
@@ -147,15 +147,21 @@ variant python26 description {Build Python 2.6 wrappers} conflicts python25 {
     }
 }
 
-variant qt4_mac conflicts x11 description {Build GUI support with Qt4 (Mac)} {
-    PortGroup     qt4 1.0
-    configure.args-append   -DVTK_USE_QT:BOOL=ON \
-                            -DVTK_USE_GUISUPPORT:BOOL=ON
+if {[variant_isset qt4_mac]} {
+    PortGroup qt4 1.0
+}
 
+variant qt4_mac conflicts x11 description {Build GUI support with Qt4 (Mac)} {
+    configure.args-append   -DVTK_USE_QT:BOOL=ON \
+                            -DVTK_USE_GUISUPPORT:BOOL=ON \
+                            -DQT_PHONON_INCLUDE_DIR=${prefix}/include/phonon \
+                            ${qt_cmake_defines}
     post-destroot {
         xinstall -m 755 -d ${destroot}${qt_plugins_dir}/designer
         move ${destroot}${prefix}/plugins/designer/libQVTKWidgetPlugin.dylib \
             ${destroot}${qt_plugins_dir}/designer/
+        set fixfile ${qt_plugins_dir}/designer/libQVTKWidgetPlugin.dylib
+        system "install_name_tool -id ${fixfile} ${destroot}${fixfile}"
     }
 }
 
