qscintilla: Trial fix for ticket #26958.  Patch to fix #include "Platform.h" to not conflict with that installed by the port 'tidy' on case-insensitive file systems.  Also, fix self-id of both the installed library and plugin, generically.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72688 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qscintilla/Portfile
+++ b/dports/devel/qscintilla/Portfile
@@ -41,6 +41,16 @@ checksums           md5     8063f8f933513959432c27c5ffecf56b \
 
 universal_variant   no
 
+post-patch {
+    # fix up 'Platform.h's, to avoid a conflict with the port 'tidy's
+    # 'platform.h'.
+    reinplace "/INCLUDEPATH/s@ \\. @ . .. @" \
+        ${worksrcpath}/Qt4/qscintilla.pro
+    foreach fixfile [exec grep -lr \"Platform\.h\" ${worksrcpath}] {
+        reinplace "s@\"Platform\.h\"@\"include/Platform\.h\"@g" ${fixfile}
+    }
+}
+
 configure.cmd       "cd ${worksrcpath}/Qt4; ${qt_qmake_cmd} qscintilla.pro; \
                      cd ${worksrcpath}/designer-Qt4; ${qt_qmake_cmd} designer.pro; \
                      echo"
@@ -50,10 +60,13 @@ build.cmd           "cd ${worksrcpath}/Qt4; make; cd ${worksrcpath}/designer-Qt4
 
 destroot.cmd        "cd ${worksrcpath}/Qt4; make install; cd ${worksrcpath}/designer-Qt4; make install; echo"
 
-post-build {
-	system "install_name_tool -id	\
-		${qt_dir}/lib/libqscintilla2.5.dylib	\
-		${worksrcpath}/Qt4/libqscintilla2.5.dylib"
+post-destroot {
+    # Fix import and plugin library ID (self name)
+    foreach fixfile [exec find ${destroot}${prefix}/share/${qt_name} \
+                         -name "*.dylib" -type f | \
+                          sed -e "s@${destroot}@@g" ] {
+        system "install_name_tool -id ${fixfile} ${destroot}${fixfile}"
+    }
 }
 
 livecheck.type      regex
