update comments in GNOME ports that depend on py26-numpy and are still not universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72689 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/anjuta/Portfile
+++ b/dports/gnome/anjuta/Portfile
@@ -39,9 +39,9 @@ configure.args  --enable-static \
                 --disable-plugin-sourceview \
                 --disable-plugin-subversion
 
-#
-# vte is not universal
-#
+# devhelp -> webkit-gtk is not universal
+# glade3 -> devhelp -> webkit-gtk is not universal
+# anjuta is not universal
 
 universal_variant no
 
