--- a/dports/gnome/gdm/Portfile
+++ b/dports/gnome/gdm/Portfile
@@ -63,7 +63,7 @@ configure.args	--x-includes=${prefix}/include \
 configure.ldflags-append "-lresolv"
 
 #
-# gnome-panel is not universal
+# gnome-panel -> evolution-data-server -> nss is not universal
 #
 
 universal_variant no
