--- a/dports/gnome/gnome-applets/Portfile
+++ b/dports/gnome/gnome-applets/Portfile
@@ -57,7 +57,7 @@ configure.args  --without-hal \
                 --disable-schemas-install
 
 #
-# gnome-panel is not universal
+# gnome-panel -> evolution-data-server -> nss is not universal
 #
 
 universal_variant no
