--- a/dports/gnome/gnome-control-center/Portfile
+++ b/dports/gnome/gnome-control-center/Portfile
@@ -49,7 +49,7 @@ post-patch {
 }
 
 #
-# port metacity is not universal
+# port gnome-panel -> evolution-data-server -> nss is not universal
 #
 
 universal_variant no
