--- a/dports/gnome/gnome-panel/Portfile
+++ b/dports/gnome/gnome-panel/Portfile
@@ -49,7 +49,7 @@ configure.args  --x-includes=${prefix}/include \
                 --disable-schemas-install
 
 #
-# gnome_menus is not universal
+# evolution-data-server -> nss is not universal
 #
 
 universal_variant no
