--- a/dports/gnome/gnome-python-desktop/Portfile
+++ b/dports/gnome/gnome-python-desktop/Portfile
@@ -65,7 +65,7 @@ platform darwin 9 {
 }
 
 #
-# gnome-panel is not universal
+# gnome-panel -> evolution-data-server -> nss is not universal
 #
 
 universal_variant no
