--- a/dports/gnome/seahorse-plugins/Portfile
+++ b/dports/gnome/seahorse-plugins/Portfile
@@ -35,7 +35,7 @@ configure.args  --disable-epiphany \
                 --disable-scrollkeeper
 
 #
-# nautilus gnome-panel are not universal
+# gnome-panel -> evolution-data-server -> nss is not universal
 #
 
 universal_variant no
