--- a/dports/gnome/totem/Portfile
+++ b/dports/gnome/totem/Portfile
@@ -77,7 +77,7 @@ post-patch {
 }
 
 #
-# py26-gtk -> py26-cairo -> py26-numpy is not universal
+# gst-plugins-good -> gst-plugins-base -> orc is not universal
 #
 
 universal_variant no
