--- a/dports/x11/enlightenment/Portfile
+++ b/dports/x11/enlightenment/Portfile
@@ -1,35 +1,42 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
-PortSystem 1.0
-name		enlightenment
-version		0.16.8
-revision        1
-description	Enlightenment is a highly configurable windowmanager.
+
+PortSystem              1.0
+
+name                    enlightenment
+version                 0.16.8
+revision                1
+categories              x11 x11-wm
+platforms               darwin
+maintainers             nomaintainer
+
+description             Enlightenment is a highly configurable windowmanager.
+
 long_description        Enlightenment is a completely themeable, \
-			highly configurable Window Manager for i \
-			the X Window System, traditionally used \
-			in Unix environments. 
-maintainers	nomaintainer
-categories	x11 x11-wm
-platforms	darwin 
-homepage	http://www.enlightenment.org/
-master_sites    sourceforge
-distname	e16-${version}
-checksums	md5 ab16ef2d4608f2b24175cc8be1cc8b1a
+                        highly configurable Window Manager for i \
+                        the X Window System, traditionally used \
+                        in Unix environments.
 
-depends_build \
-	port:pkgconfig
+homepage                http://www.enlightenment.org/
+master_sites            sourceforge
+distname                e16-${version}
 
-depends_lib \
-	port:xorg-libsm \
-	port:xorg-libXcomposite \
-	port:xorg-libXdamage \
-	port:xorg-libXinerama \
-	port:xorg-libXrandr \
-	port:xorg-libXxf86vm \
-	port:freetype \
-	port:imlib2 \
-	port:esound \
-	port:gettext
+checksums               md5     ab16ef2d4608f2b24175cc8be1cc8b1a
 
-configure.args	--enable-fsstd=yes --mandir=${prefix}/share/man
-use_parallel_build yes
+depends_build           port:pkgconfig
+
+depends_lib             port:xorg-libsm \
+                        port:xorg-libXcomposite \
+                        port:xorg-libXdamage \
+                        port:xorg-libXinerama \
+                        port:xorg-libXrandr \
+                        port:xorg-libXxf86vm \
+                        port:freetype \
+                        port:imlib2 \
+                        port:esound \
+                        port:gettext
+
+configure.args          --enable-fsstd=yes \
+                        --mandir=${prefix}/share/man
+
+use_parallel_build      yes
