--- a/dports/devel/cmake/Portfile
+++ b/dports/devel/cmake/Portfile
@@ -6,7 +6,7 @@ PortGroup	muniversal 1.0
 
 name		cmake
 version		2.8.2
-revision	3
+revision	4
 set branch	[join [lrange [split ${version} .] 0 1] .]
 categories	devel
 maintainers	css
@@ -39,6 +39,11 @@ post-patch {
 }
 
 platform darwin {
+	pre-configure {
+		if {![file exists "/System/Library/Frameworks/JavaVM.framework/Headers/jni.h"]} {
+			return -code error "\n********************\n${name} requires the Java for Mac OS X Developer Package from Apple.\nPlease download and install this package from http://developer.apple.com/.\n********************"
+		}
+	}
 	post-configure {
 		if {[variant_isset universal]} {
 			set dirs {}
