--- a/dports/gnome/gnome-utils/Portfile
+++ b/dports/gnome/gnome-utils/Portfile
@@ -30,6 +30,10 @@ depends_lib     port:gconf \
 
 use_bzip2 	yes
 
+patchfiles      patch-gnome-dictionary-libgdict-Makefile.am.diff
+
+use_autoreconf  yes
+
 configure.args  --x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib \
                 --disable-scrollkeeper \
