--- a/dports/gnome/libgtkhtml3/Portfile
+++ b/dports/gnome/libgtkhtml3/Portfile
@@ -40,10 +40,10 @@ depends_lib     port:libsoup \
 
 depends_run     port:gnome-icon-theme
 
+patchfiles      patch-configure.diff
+
 # enchant is not universal
 universal_variant   no
-
-use_parallel_build  yes
 
 test.run        yes
 test.dir        $worksrcpath/gtkhtml
