glib2: fix hardcoded path to dbus machine-id file in gio/gdbusprivate.c, closes #26924, maintainer timeout.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72697 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/glib2/Portfile
+++ b/dports/devel/glib2/Portfile
@@ -8,6 +8,7 @@ name                        glib2
 conflicts                   glib2-devel
 set my_name                 glib
 version                     2.26.0
+revision                    1
 set branch                  [join [lrange [split ${version} .] 0 1] .]
 categories                  devel
 maintainers                 ryandesign
@@ -38,7 +39,8 @@ patchfiles                  patch-configure.ac.diff \
                             patch-glib-2.0.pc.in.diff \
                             patch-glib_gunicollate.c.diff \
                             patch-gi18n.h.diff \
-                            patch-gio_xdgmime_xdgmime.c.diff
+                            patch-gio_xdgmime_xdgmime.c.diff \
+                            patch-gio_gdbusprivate.c.diff
 
 depends_build               port:pkgconfig \
                             port:dbus
@@ -71,6 +73,7 @@ post-patch {
     reinplace "s|data_dirs = \"/usr|data_dirs = \"${prefix}/share:/usr|g" ${worksrcpath}/glib/gutils.c
     reinplace "s|path = \"/bin|path = \"${prefix}/bin:/bin|g" ${worksrcpath}/glib/gutils.c ${worksrcpath}/glib/gspawn.c
     reinplace "s|@@PREFIX@@|${prefix}|g" ${worksrcpath}/gio/xdgmime/xdgmime.c
+    reinplace "s|@@PREFIX@@|${prefix}|g" ${worksrcpath}/gio/gdbusprivate.c
 }
 
 post-configure {
