glob2: add build dep on scons, and make the sconstruct use our PATH (#18565)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72699 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/glob2/Portfile
+++ b/dports/games/glob2/Portfile
@@ -27,6 +27,7 @@ checksums           md5 e0483d5864cff4ace5ac8e39eae27429 \
                     sha1 669a43707cf03e4e810e77ef8bef2f46f1116090 \
                     rmd160 266edd6a57f1e8ea8e1effac3871f3c0083fc05f
 
+depends_build       port:scons
 depends_lib         port:boost \
                     port:freetype \
                     port:jpeg \
