--- a/dports/x11/vnc/Portfile
+++ b/dports/x11/vnc/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			vnc
-conflicts		tightvnc
+conflicts		tightvnc tigervnc
 version			4.1.3
 categories		x11 vnc
 maintainers		nomaintainer
