--- a/dports/devel/glib2-devel/Portfile
+++ b/dports/devel/glib2-devel/Portfile
@@ -11,7 +11,7 @@ version                     2.27.0
 revision                    1
 set branch                  [join [lrange [split ${version} .] 0 1] .]
 categories                  devel
-maintainers                 ryandesign
+maintainers                 ryandesign openmaintainer
 license                     GPLv2
 homepage                    http://www.gtk.org/
 platforms                   darwin
