libpano13: update to 2.9.17, fix universal and non-default-build_arch build; see #26447
git-svn-id: https://svn.macports.org/repository/macports/trunk@72705 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/libpano13/Portfile
+++ b/dports/graphics/libpano13/Portfile
@@ -3,8 +3,7 @@
 PortSystem      1.0
 
 name            libpano13
-version         2.9.14
-revision        2
+version         2.9.17
 categories      graphics
 
 maintainers     freespace+macforge@gmail.com
@@ -17,17 +16,25 @@ homepage        http://panotools.sourceforge.net/
 platforms       darwin
 
 master_sites    sourceforge:panotools
-checksums           md5     fb011aead63974e630739ed55d75a4b0 \
-                    sha1    c6e74acdda64ce7d41abe7d95f291dc59de751a5 \
-                    rmd160  bc49c85e8ab11eaeb48898fcf3b9e4ac75c121c4
+
+checksums       md5     54ec7c505cf38521f2fbb6e2acd2c433 \
+                sha1    418689985ea622bc234cd4eccec42180c12821b2 \
+                rmd160  3a54295bfadbbd32009a8628968c723c7017f2df
 
 depends_lib     port:jpeg \
                 port:tiff \
                 port:libpng \
                 port:zlib
 
+patchfiles      libtool-arch.diff
+
 configure.args  --with-jpeg=${prefix} \
                 --with-tiff=${prefix} \
                 --with-png=${prefix} \
                 --with-zlib=${prefix} \
+                --without-java \
                 --mandir=${prefix}/share/man
+
+configure.cflags-append         -flat_namespace -undefined suppress
+configure.cxxflags-append       -flat_namespace -undefined suppress
+configure.ldflags-append        -prebind
