py26-qscintilla: share dist_subdir with qscintilla to avoid downloading the same distfile multiple times
git-svn-id: https://svn.macports.org/repository/macports/trunk@72709 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-qscintilla/Portfile
+++ b/dports/python/py26-qscintilla/Portfile
@@ -29,6 +29,7 @@ long_description	Python bindings for QScintilla, \
 #       since it contains the 'main' software distribution!
 #
 
+dist_subdir         qscintilla
 distname            QScintilla-gpl-${version}
 master_sites        http://www.riverbankcomputing.com/static/Downloads/QScintilla2/ \
                     http://gentoo.mirrors.easynews.com/linux/gentoo/distfiles/ \
